force-app/main/default/objects/CEE_Prime__c/CEE_Prime__c.object-meta.xml
<CustomObject>
    <description>Montant de la prime CEE selon le produit, la zone et la catégorie du chantier</description>
    <label>CEE Prime</label>
    <nameField>
        <displayFormat>CEEP/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CEE Primes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>