force-app/main/default/objects/CEE_Prime__c/fields/dateFinValidite__c.field-meta.xml
<CustomField>
    <fullName>dateFinValidite__c</fullName>
    <label>Date de fin de validité</label>
    <type>Date</type>
</CustomField>