force-app/main/default/objects/CEE_Prime__c/fields/montant__c.field-meta.xml
<CustomField>
    <fullName>montant__c</fullName>
    <label>Montant</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>