force-app/main/default/objects/CEE_Prime__c/fields/produit__c.field-meta.xml
<CustomField>
    <fullName>produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CEE Primes</relationshipLabel>
    <relationshipName>CEE_Primes</relationshipName>
    <type>Lookup</type>
</CustomField>