force-app/main/default/objects/CEE_Prime__c/fields/zone__c.field-meta.xml
<CustomField>
    <fullName>zone__c</fullName>
    <label>Zone</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H1_IDF</fullName>
                <label>H1 (IDF)</label>
            </value>
            <value>
                <fullName>H1</fullName>
                <label>H1 (Autre)</label>
            </value>
            <value>
                <fullName>H2</fullName>
            </value>
            <value>
                <fullName>H3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>