force-app/main/default/objects/CEE_Prime__c/listViews/Primes.listView-meta.xml
<ListView>
    <fullName>Primes</fullName>
    <columns>NAME</columns>
    <columns>dateDebutValidite__c</columns>
    <columns>dateFinValidite__c</columns>
    <columns>categorie__c</columns>
    <columns>zone__c</columns>
    <columns>produit__c</columns>
    <columns>montant__c</columns>
    <filterScope>Everything</filterScope>
    <label>Primes</label>
    <language>fr</language>
</ListView>